# SocketsTraining

./: CMakeLists.txt  README.md  main.cpp  socket.cpp  socket.h  socketexception.cpp  socketexception.h  tcpserversocket.cpp  tcpserversocket.h  tcpsocket.cpp  tcpsocket.h  udpsocket.cpp  udpsocket.h
